--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ target/
 .sts4-cache
 .env
 
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
@@ -29,6 +30,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+/uploads
 
 ### VS Code ###
 .vscode/
