--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,8 @@ spring:
 
 jwt:
   secret: ${SECRET_KEY:default_secret}
+
+google:
+  api:
+    GEMINI_API_KEY: ${GOOGLE_API_KEY}
+    key: ${GOOGLE_API_KEY}
