--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+### projeto ###
+
+.uploads
+
 ### STS ###
 .apt_generated
 .classpath
